Externatlized resources to be persisted

--- a/stubs/config.yml
+++ b/stubs/config.yml
@@ -9,4 +9,15 @@
       file: price.json
 
 
+-  request:
+      url: ^/it06.json$
+      method: GET
+
+   response:
+      status: 200
+      headers:
+         content-type: application/json
+      file: price.json
+
+        
 
