--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,9 @@
 base_url=http://localhost:9876
+track_jobs=false
 db=job_tracker
 user=postgres
 password=password
 host=localhost
 port=5432
+
+resources=["/it05.json", "/it06.json"]
